# AIVoiceFactory

./: .gitignore  LICENCE  README.md  angular.json  package.json  pnpm-lock.yaml
src/: styles.less
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/benches/: encrypt_benchmark.rs
src-tauri/cpal/asio-sys/: Cargo.toml  build.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/asio/: mod.rs
src-tauri/src/audio/: listener.rs  mod.rs  talk.rs
src-tauri/src/commands/: audios.rs  configs.rs  mapping.rs  mod.rs  voicevox.rs  whisper.rs
src-tauri/src/common/: app.rs  constants.rs  mod.rs
src-tauri/src/config/: audio.rs  auto_translation.rs  config.rs  config_manager.rs  mod.rs  proxy.rs  voice_engine.rs  voice_recognition.rs
src-tauri/src/controller/: audio_manager.rs  audio_recorder.rs  generator.rs  mod.rs  recognizer.rs  translator.rs
src-tauri/src/controller/errors/: mod.rs
src-tauri/src/controller/translators/: baidu_translation.rs  mod.rs  openapi.rs
src-tauri/src/controller/voice_engine/: mod.rs  voice_vox.rs
src-tauri/src/controller/voice_engine/voicevox/: binary.rs  bindings.md  http.rs  mod.rs  model.rs
src-tauri/src/controller/voice_recognition/: mod.rs  whisper.rs  whisper_lib.rs  whisper_lib_bindings.md
src-tauri/src/cypher/: encrypt.rs
src-tauri/src/logger/: setup.rs
src-tauri/src/utils/: audio.rs  http.rs  mod.rs  windows.rs
src-tauri/whisper/: README.md
src/app/: app-routing.module.ts  app.component.ts  app.module.ts  local-storage.service.ts
src/app/auto-translation/: auto-translation.component.html  auto-translation.component.spec.ts  auto-translation.component.ts  auto-translation.service.spec.ts  auto-translation.service.ts  auto-translation.ts  baidu_languages.ts
src/app/key-recorder/: key-recorder.component.html  key-recorder.component.less  key-recorder.component.spec.ts  key-recorder.component.ts
src/app/main-page/: main-page.component.html  main-page.component.less  main-page.component.ts
src/app/recording-popup/: recording-popup.component.html  recording-popup.component.less  recording-popup.component.spec.ts  recording-popup.component.ts
src/app/settings/: settings.component.html  settings.component.less  settings.component.ts  settings.service.ts  settings.ts
src/app/voice-engine/: voice-engine.component.html  voice-engine.component.less  voice-engine.component.spec.ts  voice-engine.component.ts  voice-engine.service.spec.ts  voice-engine.service.ts  voice-engine.ts
src/app/voice-engine/voice-vox-engine/: voice-vox-engine.component.html  voice-vox-engine.component.less  voice-vox-engine.component.spec.ts  voice-vox-engine.component.ts  voice-vox.ts
src/app/voice-engine/voice-vox-speaker/: voice-vox-speaker.component.html  voice-vox-speaker.component.less  voice-vox-speaker.component.spec.ts  voice-vox-speaker.component.ts
src/app/voice-recognition/: voice-recognition.component.html  voice-recognition.component.less  voice-recognition.component.spec.ts  voice-recognition.component.ts  voice-recognition.service.ts  voice-recognition.ts  whisper_data.ts  whisper_languages.ts
src/app/window/: audio-data.ts  window.component.html  window.component.less  window.component.ts  window.service.ts
