[package]
name = "ai_voice_factory"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
log4rs = "1.2.0"
serde_yaml = "0.9.19"
byte-unit = "4.0.19"
aes = "0.7.5"
base64 = "0.21.0"
block-modes = "0.8.1"
bytebuffer = "2.1.1"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
lazy_static = "1.4.0"
bytes = "1.4.0"
reqwest = { version = "0.11.15", features = ["json"] }
wav = "1.0.0"
chrono = "0.4.24"
cpal = "0.15.1"
rodio = "0.17.1"
md5 = "0.7.0"
sled = "0.34.7"
bincode = "1.3.3"
parking_lot = "0.12.1"
hound = "3.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
