[package]
name = "ai_voice_factory"
version = "1.0.1"
description = "AI voice factory for various kind of voice functionalities"
authors = ["github.com/blacksider"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["global-shortcut-all", "shell-open", "system-tray"] }
tauri-runtime = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
log4rs = "1.2.0"
serde_yaml = "0.9.19"
byte-unit = "4.0.19"
aes = "0.7.5"
base64 = "0.21.0"
block-modes = "0.8.1"
bytebuffer = "2.1.1"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
lazy_static = "1.4.0"
bytes = "1.4.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.15", features = ["json", "multipart", "blocking"] }
wav = "1.0.0"
chrono = "0.4.24"
cpal = "0.15.1"
dasp_sample = "0.11.0"
rodio = "0.17.1"
md5 = "0.7.0"
sled = "0.34.7"
bincode = "1.3.3"
parking_lot = "0.12.1"
hound = "3.5.0"
sevenz-rust = "0.2.9"
walkdir = "2.3.3"
libloading = "0.7.4"
samplerate = "0.2.4"
uuid = "1.3.1"
num_cpus = "1.15.0"
async-openai = "0.10.2"
anyhow = "1.0"

[target.'cfg(any(target_os = "windows"))'.dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "psapi", "winsvc", "winuser", "synchapi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "project_lib"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "encrypt_benchmark"
harness = false
